fix: empty category graph

--- a/templates/index.html
+++ b/templates/index.html
@@ -217,6 +217,7 @@
       update(root);
 
       function update(source) {
+        let i = 0;
         // Assigns the x and y position for the nodes
         const treeData = treemap(root);
         // Compute new tree layout
